glx/testdata/invalid/custom-vocab-edge-cases/media/media-custom.glx
media:
  media-custom:
    uri: "media/photos/photo.jpg"
    mime_type: "image/jpeg"
    media_type: unknown-media-type


